[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gates/nodes/node_multiple_lines.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0998

[node name="line_node" type="Node2D" groups=["line_node"]]
position = Vector2( -1, 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 3 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
